Removed connection pooling for now.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -52,7 +52,7 @@ dependencies = [
     "pre-commit",
     "gunicorn",
     "whitenoise",
-    # "django-heroku", pip install this separately after running `uv sync`
+    "django-heroku",
     "tqdm",
     "bs4",
     "beautifulsoup4",
