new rel courses + minor yaml restructuring

--- a/backend/minors/REL.yaml
+++ b/backend/minors/REL.yaml
@@ -15,7 +15,7 @@ contacts:
 req_list:
 - name: REL Minor Courses
   max_counted: 1
-  min_needed: 3
+  min_needed: 2
   explanation: |-
     Students must successfully complete five courses related to religion, fulfilling certain conditions.
   double_counting_allowed: false
@@ -31,135 +31,95 @@ req_list:
     pdfs_allowed: 1
     course_list:
     - REL ***
-  - name: Multiple areas of study
+  - name: Areas of study
     max_counted: 1
     min_needed: 2
     explanation: |-
-      The five courses should not all be focused on a single religious tradition or approach. 
-      That is, the five courses must include courses from at least two of the five “Areas of Study” in which 
-      the Department of Religion offers courses. The five Areas of Study are Ancient Judaism, Christianity, 
-      and Greek and Roman Religions; Islam; Religion in the Americas; Religions of Asia; and Philosophical and 
-      Ethical Approaches to Religion.
+      The five courses should not all be focused on a single religious tradition or approach, nor should they 
+      all be focused on different traditions or approaches. That is, the five courses must include courses from 
+      at least two of the five “Areas of Study” in which the Department of Religion offers courses and  two (or more) 
+      courses from one of those five areas. The five Areas of Study are Ancient Judaism, Christianity, and Greek and 
+      Roman Religions; Islam; Religion in the Americas; Religions of Asia; and Philosophical and Ethical Approaches to 
+      Religion.
     req_list:
     - name: Religions of Asia
-      max_counted: 1
+      max_counted: 4
       min_needed: 1
       course_list:
+        - REL 210
         - REL 225
         - REL 226
         - REL 228
         - REL 229
         - REL 322
+        - REL 324
         - REL 326
+        - REL 382
     - name: Ancient Judaism, Christianity, and Greek and Roman Religions
-      max_counted: 1
+      max_counted: 4
       min_needed: 1
       course_list:
+        - REL 202
         - REL 230
+        - REL 234
+        - REL 244
+        - REL 246
         - REL 251
         - REL 252
+        - REL 348
         - REL 350
         - REL 352
         - REL 353
+        - REL 411
     - name: Islam
-      max_counted: 1
+      max_counted: 4
       min_needed: 1
       course_list:
         - REL 235
         - REL 236
+        - REL 239
         - REL 240
         - REL 328
+        - REL 332
         - REL 334
         - REL 335
         - REL 336
         - REL 338
+        - REL 415
     - name: Religion in America
-      max_counted: 1
+      max_counted: 4
       min_needed: 1
       course_list:
+        - REL 255
+        - REL 257
         - REL 258
+        - REL 271
         - REL 319
         - REL 357
         - REL 358
         - REL 360
         - REL 367
+        - REL 372
+        - REL 383
     - name: Philosophical and Ethical Approaches to Religion
-      max_counted: 1
+      max_counted: 4
       min_needed: 1
       course_list:
+        - REL 211
         - REL 242
         - REL 261
+        - REL 264
+        - REL 303
         - REL 311
         - REL 312
+        - REL 314
         - REL 317
         - REL 346
         - REL 347
+        - REL 361
         - REL 363
         - REL 364
-  - name: Focus on an area of study
-    max_counted: 1
-    min_needed: 1
-    explanation: |-
-      The courses should not all be focused on different traditions or approaches. That is, the five courses must 
-      include two (or more) courses from one of those five areas. The five Areas of Study are Ancient Judaism, Christianity, 
-      and Greek and Roman Religions; Islam; Religion in the Americas; Religions of Asia; and Philosophical and Ethical 
-      Approaches to Religion.
-    req_list:
-    - name: Religions of Asia
-      max_counted: 1
-      min_needed: 2
-      course_list:
-        - REL 225
-        - REL 226
-        - REL 228
-        - REL 229
-        - REL 322
-        - REL 326
-    - name: Ancient Judaism, Christianity, and Greek and Roman Religions
-      max_counted: 1
-      min_needed: 2
-      course_list:
-        - REL 230
-        - REL 251
-        - REL 252
-        - REL 350
-        - REL 352
-        - REL 353
-    - name: Islam
-      max_counted: 1
-      min_needed: 2
-      course_list:
-        - REL 235
-        - REL 236
-        - REL 240
-        - REL 328
-        - REL 334
-        - REL 335
-        - REL 336
-        - REL 338
-    - name: Religion in America
-      max_counted: 1
-      min_needed: 2
-      course_list:
-        - REL 258
-        - REL 319
-        - REL 357
-        - REL 358
-        - REL 360
-        - REL 367
-    - name: Philosophical and Ethical Approaches to Religion
-      max_counted: 1
-      min_needed: 2
-      course_list:
-        - REL 242
-        - REL 261
-        - REL 311
-        - REL 312
-        - REL 317
-        - REL 346
-        - REL 347
-        - REL 363
-        - REL 364
+        - REL 365
 - name: Research Symposium
   max_counted: 1
   min_needed: 1
@@ -172,6 +132,7 @@ req_list:
     Students are encouraged to present on a paper that they completed as part of one of their courses in the minor, but those desiring 
     other options are encouraged to discuss them with the DUS. All students in the minor are encouraged to seek the advice of relevant faculty in 
     putting together their presentations.
+  no_req:
 - name: Reflection Paper
   max_counted: 1
   min_needed: 1
@@ -179,6 +140,7 @@ req_list:
     Minors are required to submit a Reflection Paper after completing the course and conference requirements for the minor. 
     This short (2-3 page) paper will narrate the student’s coursework in the minor with particular focus on how that work has
     related to their work in their major and/or other aspects of their time at Princeton.
+  no_req:
 - name: Restrictions
   max_counted: 0
   min_needed: 1
