--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "evergreen-ui": "^7.1.9",
+    "hoagieplan": "file:",
     "next": "^14.2.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
