--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,8 @@ dependencies = [
     "djangorestframework>=3.15.2",
     "django-cors-headers>=4.5.0",
     "colorama>=0.4.6",
+    "psycopg2>=2.9.10",
+    "postgres>=4.0",
 ]
 
 # ===============================
